--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>FEH Pocket Tactician</title>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.3.2/stitch.js"></script>
     <script src="scripts.js"></script>
     <script src="index.js"></script>
   </head>
   
   <body>
-    <div id="navbarAndLogin">
+    <!---
+    <div id="navbar">
       <ul class="navbarUL">
         <li class="navbar"><a class="active" href="./index.html">FEHPT</a></li>       
         <li class="navbar" id="navbarLoggedInManage"><a href="./manageheroes.html">Manage Heroes</a></li>
@@ -31,6 +31,7 @@
         <input type="submit" value="Login"></input>
       </form>
     </div>
+    --->
     <div class="title">
       <p>Fire Emblem Heroes Pocket Tactician!</p>
     </div>
